# chx-matrix

./: LICENSE  Makefile  Matrix.ipynb  README.md  Readme.ipynb  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-test.yml
src/: chx_matrix.pyi  matrix.c  matrix.h  matrix_column.c  matrix_column.h  matrix_data.c  matrix_data.h  matrix_iterators.c  matrix_iterators.h  matrix_maths.c  matrix_maths.h  matrix_methods.c  matrix_methods.h  matrix_object.c  matrix_object.h  matrix_row.c  matrix_row.h  utils.c  utils.h
test/: test_matrix.py  test_row.py
tests/: test_column.py  test_matrix.py  test_operators.py  test_row.py  test_sub_matrix.py
